--- a/Stylesheets/lake_styles.css
+++ b/Stylesheets/lake_styles.css
@@ -138,3 +138,10 @@ section {
 #rightcol h2 {
   font-size: 35px;
 }
+
+h1 {
+  font-family: "Cormorant Garamond", serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 40px;
+}
