--- a/Stylesheets/lake_styles.css
+++ b/Stylesheets/lake_styles.css
@@ -140,7 +140,7 @@ section {
 }
 
 h1 {
-  font-family: "Cormorant Garamond", serif;
+  font-family: serif;
   font-weight: 500;
   font-style: normal;
   font-size: 40px;
